# chats-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
applications/chats/: admin.py  apps.py  urls.py
applications/chats/management/commands/: generate_sample_chats.py
applications/chats/managers/: __init__.py  chat.py  file_manager.py  message_manager.py
applications/chats/migrations/: 0001_initial.py
applications/chats/models/: __init__.py  chat.py  file.py  message.py
applications/chats/repositories/: chat_repository.py
applications/chats/serializers/: __init__.py  chat_serializer.py  file_serializer.py  message_serializer.py
applications/chats/views/: __init__.py  chat_view.py  file_view.py  message_view.py
core/: settings.py  urls.py
