[project]
name = "chats"
version = "0.1.0"
description = "A simple chat application"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "django>=5.1.7",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "markdown>=3.7",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
